tests/fsharp/typeProviders/negTests/neg2g.bsl

neg2g.fsx(7,31,7,47): typecheck error FS3039: A direct reference to the generated type 'TheContainerType' is not permitted. Instead, use a type definition, e.g. 'type TypeAlias = <path>'. This indicates that a type provider adds generated types to your assembly.

neg2g.fsx(7,31,7,47): typecheck error FS3039: A direct reference to the generated type 'TheContainerType' is not permitted. Instead, use a type definition, e.g. 'type TypeAlias = <path>'. This indicates that a type provider adds generated types to your assembly.
